end point update

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- Backend URL Configuration -->
     <!-- For production: Replace with your backend URL (e.g., https://yourproject.onrender.com) -->
     <!-- For development: Keep as http://localhost:10000 -->
-    <script>window.BACKEND_URL = 'http://localhost:10000';</script>
+    <script>window.BACKEND_URL = 'https://acc-backend-n4be.onrender.com';</script>
     <script src="script.js"></script>
 </body>
 </html>
